fix: footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1104,7 +1104,7 @@ nav {
    10.Footer
    ============================ */
 footer {
-    padding: 5.5rem 0;
+    padding: 3rem 0 9rem 0;
     text-align: center;
     margin-top: 0;
     position: relative;
@@ -1117,7 +1117,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .footer-socials {
@@ -1145,7 +1145,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.4rem;
     font-family: 'Manrope', sans-serif;
     font-size: 1.1rem;
     color: #666;
@@ -1158,7 +1158,7 @@ footer {
     gap: 0.5rem;
     font-size: 1rem;
     color: #a7a7a7;
-    margin-bottom: 3rem;
+    margin-bottom: 0;
 }
 
 .location-easter-egg {
